------------------------------------------------------
Release 2 | Beta 0 | Development 0 | Experimental 2

* Added AndroidInput
* Added AndroidInputListenerInterface
* Added InputManagerAndroid

* Fixed bug: Bitmap font rendered in the wrong place

------------------------------------------------------
Release 2 | Beta 0 | Development 0 | Experimental 1

* Added FontPC
* Added ImageSetPC
* Added ImageSetAndroid

* Fixed bug: RenderableObject2D didn't render in the
  correct place unless the width was equal to the
  height on Android
  
* Fixed bug: Bitmap font's were not rendering in
  the correct place

------------------------------------------------------
Release 2 | Beta 0 | Development 0 | Experimental 1

* Added ImageLoaderPC
* Added ImageLoaderAndroid

* Fixed bug: Android RenderableObject2D didn't rotate
  around the centre of the object

------------------------------------------------------
Release 2 | Beta 0 | Development 0 | Experimental 0

Information:

This update includes many new features, some of which,
were not the easiest to implement, since they were
quite new to me, but here is the new release.

New Features:

* More GUI
* Controller Support
* Basic Android Support
* Particle emitters
* Bitmap Fonts
* Some more utilities

Full Change Log:

* Added GUITextBoxSelection
* Added KeyboardShortcut
* Added KeyboardShortcuts
* Added KeyboardShortcutListener
* Added ClipboardUtils
* Added GUIToolTip
* Added GUIFill
* Added GUILoadingBar
* Added GUISlider
* Added GUIPanel
* Added GUIWindow
* Added InputManagerController
* Added InputController
* Added ControllerUtils
* Added ControllerTest
* Added ControllerEvent
* Added ControllerAxis
* Added ControllerAxisEvent
* Added ControllerButton
* Added ControllerButtonEvent
* Added ContollerPov
* Added ControllerPovEvent
* Added ControlBinding
* Added ControlBindingAxis
* Added ControlBindingButton
* Added ControlBindings
* Added ControlInputListener
* Added ControllerRumbler
* Added ClampUtils