@@ -23,36 +23,11 @@ public class AndroidRenderer extends Renderer {
 	/* The active texture */
 	public static Image texture;
 	
-	/* The Android shader code */
-	private static final String[] androidVertexShaderCode = new String[] {
-		 	"attribute vec4 colour;",
-		 	"varying vec4 fcolour;",
-		    "attribute vec4 vertexPosition;",
-		    "attribute vec4 normal;",
-		    "attribute vec2 textureCoord;",
-		    "varying vec2 textureV;",
-		 	"uniform mat4 matrix;",
-		    "void main() {",
-		    "  fcolour = colour;",
-		    "  textureV = textureCoord;",
-		    "  gl_Position = matrix * vertexPosition;",
-		    "}" };
+	/* The default Android shader */
+	public static Shader defaultAndroidShader;
 	
-	private static final String[] androidFragmentShaderCode = new String[] {
-		    "varying vec4 fcolour;",
-		    "varying vec2 textureV;",
-		    "uniform sampler2D texture;",
-		    "uniform float hasTexture;",
-		    "void main() {",
-		    "  if (hasTexture > 0.5) {",
-		    "    gl_FragColor = fcolour * texture2D(texture, textureV);",
-		    "  } else {",
-		    "    gl_FragColor = fcolour;",
-		    "  }",
-		    "}" };
-	
-	/* The Android shader */
-	public Shader androidShader;
+	/* The current shader */
+	public static Shader currentShader;
 	
 	/* The constructor with the render mode and the 
 	 * number of vertex values given */
@@ -61,10 +36,12 @@ public class AndroidRenderer extends Renderer {
 		//Set the default usage
 		usage = GLES20.GL_STATIC_DRAW;
 		//Setup the Android shader
-		this.androidShader = new AndroidShader();
-		this.androidShader.vertexShader = ShaderUtils.createShader(ArrayUtils.toStringList(androidVertexShaderCode), GLES20.GL_VERTEX_SHADER);
-		this.androidShader.fragmentShader = ShaderUtils.createShader(ArrayUtils.toStringList(androidFragmentShaderCode), GLES20.GL_FRAGMENT_SHADER);
-		this.androidShader.create();
+		if (defaultAndroidShader == null) {
+			defaultAndroidShader = new AndroidShader();
+			defaultAndroidShader.vertexShader = ShaderUtils.createShader(ArrayUtils.toStringList(ShaderUtils.androidVertexAndorMain), GLES20.GL_VERTEX_SHADER);
+			defaultAndroidShader.fragmentShader = ShaderUtils.createShader(ArrayUtils.toStringList(ShaderUtils.androidVertexAndorMain), GLES20.GL_FRAGMENT_SHADER);
+			defaultAndroidShader.create();
+		}
 	}
 	
 	/* The method used to setup the buffers,
@@ -93,7 +70,7 @@ public class AndroidRenderer extends Renderer {
 			
 			//Bind the normals buffer and give OpenGL the data
 			GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.normalsHandle);
-			GLES20.glBufferData(GLES20.GL_ARRAY_BUFFER, Float.BYTES * verticesData.length, this.normalsBuffer, this.usage);
+			GLES20.glBufferData(GLES20.GL_ARRAY_BUFFER, Float.BYTES * normalsData.length, this.normalsBuffer, this.usage);
 			GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, 0);
 		}
 		
@@ -141,37 +118,42 @@ public class AndroidRenderer extends Renderer {
 	
 	/* The method used to draw the object */
 	public void render() {
-		this.androidShader.use();
+		//Set the correct android shader
+		Shader androidShader = defaultAndroidShader;
+		if (currentShader != null)
+			androidShader = currentShader;
+		//Use the shader program
+		GLES20.glUseProgram(androidShader.program);
 		//Enable the arrays as needed
-		int vertexPositionAttribute = this.androidShader.getAttributeLocation("vertexPosition");
+		int vertexPositionAttribute = androidShader.getAttributeLocation("andor_vertexPosition");
 		int normalAttribute = 0;
 		int colourAttribute = 0;
 		int texturesAttribute = 0;
-		int matrixAttribute = this.androidShader.getUniformLocation("matrix");
+		int matrixAttribute = androidShader.getUniformLocation("andor_matrix");
 		GLES20.glUniformMatrix4fv(matrixAttribute, 1, false, AndroidDisplayRenderer.mMVPMatrix, 0);
 		GLES20.glEnableVertexAttribArray(vertexPositionAttribute);
 		GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.verticesHandle);
 		GLES20.glVertexAttribPointer(vertexPositionAttribute, this.vertexValuesCount, GLES20.GL_FLOAT, false, 0, 0);
 		if (this.normalsData != null) {
-			normalAttribute = this.androidShader.getUniformLocation("normal");
+			normalAttribute = androidShader.getAttributeLocation("andor_normal");
 			GLES20.glEnableVertexAttribArray(normalAttribute);
 			GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.normalsHandle);
 			GLES20.glVertexAttribPointer(normalAttribute, this.vertexValuesCount, GLES20.GL_FLOAT, false, 0, 0);
 		}
 		if (this.colourData != null) {
-			colourAttribute = this.androidShader.getAttributeLocation("colour");
+			colourAttribute = androidShader.getAttributeLocation("andor_colour");
 			GLES20.glEnableVertexAttribArray(colourAttribute);
 			GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.coloursHandle);
 			GLES20.glVertexAttribPointer(colourAttribute, this.colourValuesCount, GLES20.GL_FLOAT, false, 0, 0);
 		}
 		if (this.textureData != null) {
-			texturesAttribute = this.androidShader.getAttributeLocation("textureCoord");
+			texturesAttribute = androidShader.getAttributeLocation("andor_textureCoord");
 			GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.texturesHandle);
 			GLES20.glEnableVertexAttribArray(texturesAttribute);
 			GLES20.glVertexAttribPointer(texturesAttribute, this.textureValuesCount, GLES20.GL_FLOAT, false, 0, 0);
-			GLES20.glUniform1i(this.androidShader.getUniformLocation("texture"), 0);
+			GLES20.glUniform1i(androidShader.getUniformLocation("andor_texture"), 0);
 			if (texture != null)
-				GLES20.glUniform1f(this.androidShader.getUniformLocation("hasTexture"), 1f);
+				GLES20.glUniform1f(androidShader.getUniformLocation("andor_hasTexture"), 1f);
 		}
 		if (this.drawOrder != null) {
 			GLES20.glBindBuffer(GLES20.GL_ELEMENT_ARRAY_BUFFER, this.drawOrderHandle);
@@ -189,7 +171,8 @@ public class AndroidRenderer extends Renderer {
 		if (this.colourData != null)
 			GLES20.glDisableVertexAttribArray(colourAttribute);
 		GLES20.glDisableVertexAttribArray(vertexPositionAttribute);
-		this.androidShader.stopUsing();
+		//Stop using the android shader program
+		GLES20.glUseProgram(0);
 	}
 	
 	/* The method used to update the vertices */
@@ -213,7 +196,7 @@ public class AndroidRenderer extends Renderer {
 		if (! Settings.AndroidMode) {
 			//Bind the normals buffer and give OpenGL the data
 			GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.normalsHandle);
-			GLES20.glBufferData(GLES20.GL_ARRAY_BUFFER, Float.BYTES * verticesData.length, this.normalsBuffer, this.usage);
+			GLES20.glBufferData(GLES20.GL_ARRAY_BUFFER, Float.BYTES * normalsData.length, this.normalsBuffer, this.usage);
 		}
 	}
 	
